--- a/gateway/src/main/resources/application.yaml
+++ b/gateway/src/main/resources/application.yaml
@@ -17,9 +17,10 @@ eureka:
     instance-id: gateway-zuul-80
 
   client:
-      service-url:
-        # 注册中心地址
-        defaultZone: http://eureka8761:8761/eureka,http://eureka8762:8762/eureka
+    service-url:
+      # 注册中心地址
+      defaultZone: http://eureka8761:8761/eureka,http://eureka8762:8762/eureka
+#    fetch-registry: true
 
 
 hystrix:
@@ -40,7 +41,7 @@ ribbon:
     enabled: true
 zuul:
   routes:
-    consumer9001: /consumer/**
+    consumer9002: /consumer/**
     provider: /provider/**
   # 禁止以服务名访问
   ignored-services: "*"
