--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
         <module>dashboard</module>
         <module>turbine</module>
         <module>gateway</module>
+        <module>configRegistry</module>
+        <module>zipkin</module>
     </modules>
 
     <parent>
@@ -26,7 +28,7 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <spring-cloud.version>Greenwich.SR6</spring-cloud.version>
+        <spring-cloud.version>Greenwich.SR4</spring-cloud.version>
     </properties>
 
     <dependencyManagement>
@@ -43,6 +45,19 @@
                 <groupId>com.anyang</groupId>
                 <artifactId>common</artifactId>
                 <version>1.0-SNAPSHOT</version>
+            </dependency>
+
+
+            <dependency>
+                <groupId>io.zipkin.java</groupId>
+                <artifactId>zipkin-autoconfigure-ui</artifactId>
+                <version>2.12.3</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.zipkin.java</groupId>
+                <artifactId>zipkin-server</artifactId>
+                <version>2.12.3</version>
             </dependency>
 
         </dependencies>
